Compatibility with Java17